<resources>
    <string name="app_name">TestMap</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="log_out">Log out</string>
    <string name="username">Username</string>
</resources>